--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">My Soulmate</string>
     <string name="title_activity_main">My Soulmate</string>
-    <string name="package_name">com.mysoulmate.mysoulmate_App</string>
-    <string name="custom_url_scheme">com.mysoulmate.mysoulmate_App</string>
+    <string name="package_name">mysoulmate.co.in</string>
+    <string name="custom_url_scheme">mysoulmate.co.in</string>
 </resources>
